--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,13 @@ body {
     text-align: center;
     margin-top: 0; 
   }
-  
+  footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+}
 
   .page-footer {
     background-color: #28a745;
